k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: liatrio-interview-exercise
  labels:
    app: liatrio-interview-exercise
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: liatrio-interview-exercise
